templates/cloudformation/security_groups.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: '03.Cloud9++ - Security Groups Template'

Parameters:
  Tag:
    Description: Name used to identified  values. Defaults to
    Type: String
    MaxLength: 16
    MinLength: 4
  VPC:
    Type: String

Resources:
  DefaultSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Tag}-Default'
      GroupDescription: !Sub '${Tag}-Default'
      Tags:
        - Key: Name
          Value: !Sub '${Tag}-Default'
      VpcId: !Ref VPC

  DefaultSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: DefaultSecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId:
        Ref: DefaultSecurityGroup

  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Tag}-LoadBalancer'
      GroupDescription: !Sub '${Tag}-LoadBalancer'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
        CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${Tag}-LoadBalancer'
      VpcId: !Ref VPC

  LoadBalancerGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: DefaultSecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId:
        Ref: LoadBalancerSecurityGroup

  InboundSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Tag}-Inbound'
      GroupDescription: !Sub '${Tag}-Inbound'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '3389'
        ToPort: '3389'
        CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${Tag}-Inbound'
      VpcId: !Ref VPC

  InboundSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: DefaultSecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId:
        Ref: InboundSecurityGroup

Outputs:
  InboundSecurityGroup:
    Description: "InboundSecurityGroup"
    Value: !Ref InboundSecurityGroup
    Export:
      Name: !Sub '${Tag}-InboundSecurityGroup'
  DefaultSecurityGroup:
    Description: "DefaultSecurityGroup"
    Value: !Ref DefaultSecurityGroup
    Export:
      Name: !Sub '${Tag}-DefaultSecurityGroup'
  LoadBalancerSecurityGroup:
    Description: "LoadBalancerSecurityGroup"
    Value: !Ref LoadBalancerSecurityGroup
    Export:
      Name: !Sub '${Tag}-LoadBalancerSecurityGroup'
